--- a/WebMobile/package.json
+++ b/WebMobile/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.5.0",
     "@emotion/core": "^10.1.1",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
@@ -19,6 +20,7 @@
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-back-to-top-button": "0.0.14",
     "react-bootstrap": "^1.5.0",
     "react-chartjs-2": "^2.11.1",
     "react-cookie": "^4.0.3",
