--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-scripts": "^4.0.1",
     "react-spinners": "^0.9.0",
     "react-toastify": "^6.2.0",
-    "write-json-file": "^4.3.0"
+    "write-json-file": "^4.3.0",
+    "json-server": "^0.17.3"
   },
   "scripts": {
     "start": "react-scripts start",
